# momentum

./: .env.example  .gitignore  CONTEXT.md  docker-compose.yml
.github/workflows/: build-and-push.yml  deploy.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/momentum/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
backend/momentum/core/: models.py
backend/momentum/core/utils/: aggregation.py  datetime.py
backend/momentum/settings/: base.py
backend/momentum/snippets/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/momentum/snippets/migrations/: 0001_initial.py  0002_alter_snippet_options_alter_snippetscategory_options.py
backend/momentum/tasks/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/momentum/tasks/migrations/: 0001_initial.py  0002_alter_task_date.py  0003_remove_taskcompletion_timestamp_taskcompletion_date.py  0004_alter_task_user.py  0005_remove_task_period_or_date_and_not_both_and_more.py
backend/momentum/tests/: conftest.py  test_tasks.py
backend/momentum/tracker/: apps.py  models.py
backend/momentum/users/: models.py  serializers.py  urls.py  views.py
backend/momentum/users/migrations/: 0001_initial.py  0002_user_timezone.py  0003_alter_user_timezone.py
frontend/: Dockerfile  eslint.config.mjs  index.html  jsconfig.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: manifest.json  site.webmanifest.json
frontend/src/: App.jsx  main.jsx  providers.jsx
frontend/src/components/: icons.jsx  loading-spinner.jsx  navbar.jsx  routes.jsx  theme-switch.jsx  user-avatar.jsx
frontend/src/core/: api.js  local-storage.js  markdown.js  navigation.js  utils.js
frontend/src/layouts/: auth.jsx  base.jsx  default.jsx
frontend/src/pages/: finance.jsx  index.jsx  login.jsx  notes.jsx  profile.jsx  register.jsx  statistics.jsx
frontend/src/store/: index.js  snippets.js  tasks.js  user.js
nginx/: nginx.conf
(+39 files in other folders)
